<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BusinessCardPlanner</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort_by_name">Sort by Name A-Z</string>

    <string name="contact_information">Contact Information</string>
    <string name="work">Work</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="company">company</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="group">Group</string>
    <string name="businessType">Business Type</string>
    <string name="created_date">Created at</string>
    <string name="website">Website</string>
    <string name="email">Email</string>

    <string name="member">Member</string>
    <string name="add_member">Add a Member</string>

    <string name="groupName">Group name</string>
    <string name="groupDescription">Description your group</string>

    <string name="album_name">CameraSample</string>

    <string-array name="state">
        <item>State</item>
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Kuala Lumpur</item>
        <item>Labuan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>>
        <item>Penang</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>

    <string-array name="city">
        <item>Select City</item>
        <item>Alor Setar</item>
        <item>Bandar Sunway</item>
        <item>Bangsar</item>
        <item>Batu Pahat</item>
        <item>Butterworth</item>
        <item>George Town</item>
        <item>Ipoh</item>
        <item>Johor Bahru</item>
        <item>Kajang</item>
        <item>Klang</item>
        <item>Kota Damansara</item>
        <item>Kota Kinabalu</item>
        <item>Kulim</item>
        <item>Kuala Terrenganu</item>
        <item>Kuching</item>
        <item>Kuala Selangor</item>
        <item>Miri</item>
        <item>Muar</item>
        <item>Malacca city</item>
        <item>Petaling Jaya</item>
        <item>Port Dickson</item>
        <item>Port Klang</item>
        <item>Puchong</item>
        <item>Semporna</item>
        <item>Sandakan</item>
        <item>Shah Alam</item>
        <item>Seremban</item>
        <item>Sepang</item>
        <item>Subang Jaya</item>
        <item>Tawau</item>
        <item>Others</item>

    </string-array>
</resources>
